--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
     </div>
 </section>
 <!--/ Section Portfolio End /-->
-
+<hr class="w-50 my-4">
 <!-- testimonials -->
 <section class="testimonials-section text-white mx-auto" "> 
   <div class="testimonial">
