--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 <!--/ Section Portfolio End /-->
 
 <!-- testimonials -->
-<section class="testimonials-section text-white mx-auto" "> 
+<section class="testimonials-section text-white mx-auto" style="max-width: 80%;"> 
   <div class="testimonial">
     <div class="testimonial-content">
       <p class="font-italic">
