--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h1 class="intro-title mt-5 mb-3">Hi, I am Erick Gathinji. </h1>
                 <p class="h3 intro-subtitle ">I am a certified Data Analyst and use data to solve real-world business problems.</p>
                 <p class="intro-subtitle" style="Color:#5EC5F5" >
-                    <span class="text-slider-items ">Web Designer,Salesforce Certified,Finance Professional, Data Analyst, Aspiring Data Scientist</span><strong
+                    <span class="text-slider-items ">Web Designer,Salesforce Certified,Finance Expert, Data Analyst, Aspiring Data Scientist</span><strong
                         class="text-slider"></strong></p>
             </div>
         </div>
@@ -436,6 +436,10 @@
     </div>
 </section>
 <!--/ Section Portfolio End /-->
+
+<br>
+<br>
+
 
 <!-- testimonials -->
 <section class="testimonials-section text-white mx-auto" style="max-width: 80%;"> 
