--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     }
     </script>
 
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="66rsqdMwNnAxOrNrsPzBqETyzoCl_xaY2AO64F4Q--c" />
+
 
 
     <!-- Favicons -->
