--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BM2GX19XEQ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-BM2GX19XEQ');
+    </script>
+
     <meta charset="utf-8">
     <title>Erick Gathinji | Home </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -85,7 +95,6 @@
     <link href="css/style.css" rel="stylesheet">
 
 </head>
-
 
 <body id="page-top">
 
