--- a/salesforce.html
+++ b/salesforce.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BM2GX19XEQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BM2GX19XEQ');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
@@ -75,6 +85,8 @@
     <link href="img/favicon-logo.png" rel="icon">
     <link href="img/logo-apple-touch-icon.png" rel="apple-touch-icon">
 </head>
+
+
 <body>
 
 <!-- Nav star -->
