--- a/data.html
+++ b/data.html
@@ -29,7 +29,7 @@
 
     <!-- SEO Meta Tags -->
       <meta name="description"
-          content="Erick Gathinji is a proactive Data Analyst and 3x Salesforce Certified Professional with a strong background in Finance. He specializes in data analysis, CRM optimization and web development, leveraging tools like SQL, Python, Power BI, Django, Excel, Google Sheets, and Salesforce Flows to solve real-world business problems and drive data-informed decision-making. His expertise spans advanced Salesforce solutions, comprehensive data analysis for projects, and developing scalable digital tools.">
+          content="Erick is a certified Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation.">
     <meta name="keywords"
           content="Finance, Salesforce Administrator, Salesforce, Data Analysis, CRM, Business Strategy, Erick Gathinji, Portfolio, Web Design, Data Analytics, SQL, Python, Power BI, Excel, Google Sheets, Salesforce Flow, Web Development, HTML, CSS, Django, Project Management, Role Hierarchy Management, Validation Rules, Lightning App Development, Data Management, Reports & Dashboards, Security & User Access Management, Financial Analysis, Bookkeeping, Maji Ndogo, Water Crisis, Appointment Scheduler, Coworking Space, AI Associate, Sustainable Tech, Professional Foundations, Virtual Assistance, Graphics Design, Data Science">
     <meta name="author" content="Erick Gathinji">
@@ -40,7 +40,7 @@
     <meta property="og:title"
           content="Erick Gathinji | Certified Data Analytics and Salesforce Professional, and Finance Expert">
     <meta property="og:description"
-          content="Erick Gathinji is a proactive Data Analyst and 3x Salesforce Certified Professional with a strong background in Finance. He specializes in data analysis, CRM optimization and web development, leveraging tools like SQL, Python, Power BI, Django, Excel, Google Sheets, and Salesforce Flows to solve real-world business problems and drive data-informed decision-making. His expertise spans advanced Salesforce solutions, comprehensive data analysis for projects, and developing scalable digital tools.">
+          content="Erick is a certified Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation.">
     <meta property="og:image" content="https://erickgathinji.github.io/portfolio-showcase-hub/img/avatar.png">
     <meta property="og:url" content="https://erickgathinji.github.io/portfolio-showcase-hub/">
     <meta property="og:type" content="website">
@@ -50,7 +50,7 @@
     <meta name="twitter:title"
           content="Erick Gathinji | Certified Data Analytics and Salesforce Professional, and Finance Expert">
     <meta name="twitter:description"
-          content="Erick Gathinji is a proactive Data Analyst and 3x Salesforce Certified Professional with a strong background in Finance. He specializes in data analysis, CRM optimization and web development, leveraging tools like SQL, Python, Power BI, Django, Excel, Google Sheets, and Salesforce Flows to solve real-world business problems and drive data-informed decision-making. His expertise spans advanced Salesforce solutions, comprehensive data analysis for projects, and developing scalable digital tools.">
+          content="Erick is a certified Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation.">
 
     <meta name="twitter:image" content="https://erickgathinji.github.io/portfolio-showcase-hub/img/avatar.png">
 
@@ -62,6 +62,9 @@
 
     <!-- Language Tag -->
     <meta http-equiv="content-language" content="en">
+
+      <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="66rsqdMwNnAxOrNrsPzBqETyzoCl_xaY2AO64F4Q--c" />
 
     <!-- Schema.org Structured Data (JSON-LD for a Personal Website / Portfolio) -->
     <script type="application/ld+json">
@@ -77,9 +80,11 @@
         "https://github.com/erickgathinji",
         "https://www.salesforce.com/trailblazer/erickgathinji"
     ],
-    "description": Erick Gathinji is a proactive Data Analyst and 3x Salesforce Certified Professional with a strong background in Finance. He specializes in data analysis, CRM optimization and web development, leveraging tools like SQL, Python, Power BI, Django, Excel, Google Sheets, and Salesforce Flows to solve real-world business problems and drive data-informed decision-making. His expertise spans advanced Salesforce solutions, comprehensive data analysis for projects, and developing scalable digital tools."
+    "description": Erick is a certified Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation."
     }
     </script>
+
+
     <!-- Favicons -->
     <link href="img/favicon-logo.png" rel="icon">
     <link href="img/logo-apple-touch-icon.png" rel="apple-touch-icon">
