--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- SEO Meta Tags -->
       <meta name="description"
-          content="Erick Gathinji is a proactive Data Analyst and 3x Salesforce Certified Professional with a strong background in Finance. He specializes in data analysis, CRM optimization and web development, leveraging tools like SQL, Python, Power BI, Django, Excel, Google Sheets, and Salesforce Flows to solve real-world business problems and drive data-informed decision-making. His expertise spans advanced Salesforce solutions, comprehensive data analysis for projects, and developing scalable digital tools.">
+          content="Erick is a certified Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation.">
     <meta name="keywords"
           content="Finance, Salesforce Administrator, Salesforce, Data Analysis, CRM, Business Strategy, Erick Gathinji, Portfolio, Web Design, Data Analytics, SQL, Python, Power BI, Excel, Google Sheets, Salesforce Flow, Web Development, HTML, CSS, Django, Project Management, Role Hierarchy Management, Validation Rules, Lightning App Development, Data Management, Reports & Dashboards, Security & User Access Management, Financial Analysis, Bookkeeping, Maji Ndogo, Water Crisis, Appointment Scheduler, Coworking Space, AI Associate, Sustainable Tech, Professional Foundations, Virtual Assistance, Graphics Design, Data Science">
     <meta name="author" content="Erick Gathinji">
@@ -28,7 +28,7 @@
     <meta property="og:title"
           content="Erick Gathinji | Certified Data Analytics and Salesforce Professional, and Finance Expert">
     <meta property="og:description"
-          content="Erick Gathinji is a proactive Data Analyst and 3x Salesforce Certified Professional with a strong background in Finance. He specializes in data analysis, CRM optimization and web development, leveraging tools like SQL, Python, Power BI, Django, Excel, Google Sheets, and Salesforce Flows to solve real-world business problems and drive data-informed decision-making. His expertise spans advanced Salesforce solutions, comprehensive data analysis for projects, and developing scalable digital tools.">
+          content="Erick is a certified Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation.">
     <meta property="og:image" content="https://erickgathinji.github.io/portfolio-showcase-hub/img/avatar.png">
     <meta property="og:url" content="https://erickgathinji.github.io/portfolio-showcase-hub/">
     <meta property="og:type" content="website">
@@ -38,7 +38,7 @@
     <meta name="twitter:title"
           content="Erick Gathinji | Certified Data Analytics and Salesforce Professional, and Finance Expert">
     <meta name="twitter:description"
-          content="Erick Gathinji is a proactive Data Analyst and 3x Salesforce Certified Professional with a strong background in Finance. He specializes in data analysis, CRM optimization and web development, leveraging tools like SQL, Python, Power BI, Django, Excel, Google Sheets, and Salesforce Flows to solve real-world business problems and drive data-informed decision-making. His expertise spans advanced Salesforce solutions, comprehensive data analysis for projects, and developing scalable digital tools.">
+          content="Erick is a certified Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation.">
 
     <meta name="twitter:image" content="https://erickgathinji.github.io/portfolio-showcase-hub/img/avatar.png">
 
@@ -65,7 +65,7 @@
         "https://github.com/erickgathinji",
         "https://www.salesforce.com/trailblazer/erickgathinji"
     ],
-    "description": Erick Gathinji is a proactive Data Analyst and 3x Salesforce Certified Professional with a strong background in Finance. He specializes in data analysis, CRM optimization and web development, leveraging tools like SQL, Python, Power BI, Django, Excel, Google Sheets, and Salesforce Flows to solve real-world business problems and drive data-informed decision-making. His expertise spans advanced Salesforce solutions, comprehensive data analysis for projects, and developing scalable digital tools."
+    "description": Erick is a certified Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation."
     }
     </script>
 
@@ -133,7 +133,7 @@
             <div class="container p-5">
                 <!--<p class="display-6 color-d">Hello, world!</p>-->
                 <h1 class="intro-title mt-5 mb-3">Hi, I am Erick Gathinji. </h1>
-                <p class="h3 intro-subtitle ">I am a certified Data Analyst and use data to solve real-world business problems.</p>
+                <p class="h3 intro-subtitle ">A Certified Data Analyst & Salesforce professional with a finance background.</p>
                 <p class="intro-subtitle" style="Color:#5EC5F5" >
                     <span class="text-slider-items ">Web Designer,Salesforce Certified,Finance Expert, Data Analyst, Aspiring Data Scientist</span><strong
                         class="text-slider"></strong></p>
@@ -185,21 +185,17 @@
 
 
                                 <p class="lead">
-                                    I am a tech-driven professional based in Kenya, with a strong focus on data, design, and automation. 
-                                    I’m passionate about delivering value by helping businesses solve real-world challenges through 
-                                    streamlining systems, improving decision-making, and enhancing user experiences.
+                                    I am a Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation.   
+                                
                                 </p>
 
                                 <p class="lead">
-                                    My work blends analytical thinking with practical digital tools like Salesforce, web design, and 
-                                    data-driven insights. I support startups in simplifying workflows, strengthening customer 
-                                    interactions, and using technology more effectively. With a background in finance and credentials 
-                                    in Salesforce and data analytics, I bridge business goals with smart, tailored solutions.
+                                  I enjoy transforming ideas into impactful results by streamlining processes, improving decision-making, and enhancing user experiences.
+
                                 </p>
 
                                 <p class="lead">
-                                    I love turning ideas into impactful results. When I’m not solving problems with data and design, 
-                                    I’m probably automating something, exploring new tools, or playing the piano.
+                                    When I’m not solving problems with data and design, I’m exploring new tools and tech trends, or playing the piano.
                                 </p>
                             </div>
                         </div>
