--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 
                                 <p class="lead">
-                                    I am a Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation.   
+                                    I am a certified Data Analytics and Salesforce professional comfortable with Excel, SQL, Power BI, Python, Reports & Dashboards, and Salesforce Automation.   
                                 
                                 </p>
 
